# NULP_GlobalLogic

./: .gitignore  NULP_Global.postman_collection.json  README.md  alembic.ini  check_models.py  db.sqlite  lab2_v3.yaml  main.py  models.py  pyproject.toml
UI/: addAdvertisement.html  index.html  login.html  register.html  user.html
UI/scss/: style.css
alembic/: env.py
alembic/versions/: dd4f8c40861a_.py
docs/: CNAME  advertisement.html  local.html  userEdit.html
docs/scss/: style.scss
project/: __init__.py  alembic.ini  check_models.py  models.py  urls.py
project/alembic/: env.py
tests/: .coverage  test_api.py  user_test.py
