[tool.poetry]
name = "nulp_global"
version = "0.1.0"
description = ""
authors = ["Ostap <ostapbod674@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
