[tool.poetry]
name = "nulp_global"
version = "0.1.0"
description = ""
authors = ["Ostap <ostapbod674@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"
marshmallow-enum = "^1.5.1"
Flask-Bcrypt = "^0.7.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
